--- a/Zbang.Cloudents.Mvc4WebRole/Views/Alex/_StaticPageHeader.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Alex/_StaticPageHeader.cshtml
@@ -5,8 +5,17 @@
 			<h1 class="spitball-logo float-left">spitball</h1>
 		</a>
 		<div class="header-nav-links">
-			<a class="header-nav-link js-ga-track fader-link about-link" href="@Url.RouteUrl("Alex_ABOUT")">About us</a>
+			<a class="header-nav-link js-ga-track fader-link about-link" href="@Url.RouteUrl("Alex_ABOUT")">About Us</a>
 			<a class="header-nav-link js-ga-track fader-link faq-link" href="@Url.RouteUrl("Alex_FAQ")">FAQ</a>
+			<a class="header-nav-link js-ga-track fader-link tos-link" href="@Url.RouteUrl("Alex_TOS")">Terms</a>
+			<a class="header-nav-link js-ga-track fader-link privacy-link" href="@Url.RouteUrl("Alex_PRIVACY")">Privacy</a>
 		</div>
+		<a class="menu">menu</a>
 	</header>
+	<nav class="mobile-nav">
+		<a class="mobile-nav-link js-ga-track about-link" data-ga-label="About" href="@Url.RouteUrl("Alex_ABOUT")">About Us</a>
+		<a class="mobile-nav-link js-ga-track faq-link" data-ga-label="FAQ" href="@Url.RouteUrl("Alex_FAQ")">FAQ</a>
+		<a class="mobile-nav-link js-ga-track tos-link" data-ga-label="TOS" href="@Url.RouteUrl("Alex_TOS")">Terms</a>
+		<a class="mobile-nav-link js-ga-track privacy-link" data-ga-label="PRIVACY" href="@Url.RouteUrl("Alex_PRIVACY")">Privacy</a>
+	</nav>
 </div>
